2013-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Fix clr, partially by patch by Valentin Dudouyt.

2013-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Patch by Valentin Dudouyt to fix ldw.
	* src/stm8/main.c:
	  STM8: Patches by Valentin Dudouyt to fix handling of global variables and startup.

2013-05-11 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc,
	  sim/ucsim/stm8.src/instcl.h,
	  sim/ucsim/stm8.src/stm8.cc,
	  sim/ucsim/stm8.src/stm8mac.h,
	  support/regression/ports/stm8/support.c:
	  STM8: Patches by Valentin Dudouyt: The last bits to enable regression testing, fix bug in wide addition.
	* support/regression/tests/0fail.c,
	  support/regression/tests/0pass.c:
	  Removed dummy tests.
	* src/stm8/gen.c:
	  STM8: Fix handling of large operands partially in x in comparison for equality, be more careful in partial move for cast, fix signed cast.
	* src/hc08/gen.c,
	  src/z80/gen.c:
	  More efficient cast from _Bool.

2013-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/doc/asmlnk.txt: updated for all steps towards ASxxxx v5
	* sdas/doc/asxhtm.html: removed
	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.3.0

2013-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix endianness in stack / stack copy.

2013-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix multibyte false Ifx.

2013-05-07 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: removed dedication to Dennis M. Ritchie,
	  corrected ChangeLog path

2013-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix endianness in register / stack copy.

2013-05-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.3.0 rc1
	* sdcc.spec: version 3.3.0
	* sdas/asxxsrc/asout.c: suppress warning

2013-05-04 Philipp Klaus Krause <pkk AT spth.de>
